feat(web): rudimentary progress bar and duration
